# Gstreamer

./: CMakeLists.txt  main.cpp
Controller/: Controller.cpp  Controller.h
